stepped-solutions/B2/captioned_images/deploy/service.yml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: webapp
  name: webapp-service
  annotations:
    beta.cloud.google.com/backend-config:
      '{"ports": {"assets":"assets-backend-config"}}'
spec:
  ports:
  - name: dynamic
    port: 80
    targetPort: 3000
  - name: assets
    port: 81
    targetPort: 3000
  selector:
    run: webapp
  type: NodePort
